Reservation/force-app/main/default/objects/Reservation__c/fields/Additional__c.field-meta.xml
<CustomField>
    <fullName>Additional__c</fullName>
    <label>Additional</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beer</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Sauna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>