Reservation/force-app/main/default/objects/Reservation__c/fields/CountOfGuests__c.field-meta.xml
<CustomField>
    <fullName>CountOfGuests__c</fullName>
    <label>CountOfGuests</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>