Reservation/force-app/main/default/objects/Reservation__c/fields/EmailTo__c.field-meta.xml
<CustomField>
    <fullName>EmailTo__c</fullName>
    <defaultValue>$User.Email</defaultValue>
    <label>EmailTo</label>
    <type>Email</type>
</CustomField>